--- a/posts/2025-01-21_start-to-art.qmd
+++ b/posts/2025-01-21_start-to-art.qmd
@@ -8,6 +8,8 @@ frontpage: true
 description: Announcing a 3-day luxury retreat in Scotland March 28-30 featuring decorative rope by me and photography by Captured Erotica
 ---
 
+![](../www/images/start-to-art/start-to-art.jpg)
+
 I’ve been hinting at an announcement for a few weeks and it’s finally here! TeVincula is organising a 3-day luxury retreat in Scotland (March 28-30) and invited the incredibly talented photographer CapturedErotica and me to teach. We will give workshops on tying decorative designs and functional bondage, then capturing them through artistic photography. I’m so looking forward to seeing what we can create together.
 
 [Info and tickets](https://tevincula.com/shibari-weekend-glasgow/)
