--- a/posts/2025-01-23_basic-timelapse.qmd
+++ b/posts/2025-01-23_basic-timelapse.qmd
@@ -1,7 +1,7 @@
 ---
 title: Basic Corset Timelapse
 date: 2025-01-23
-categories: [timelapse, video, self-tie]
+categories: [timelapse, video, self-tie, demo]
 image: ../www/images/ties-sfw/basic-tl.jpg
 image-alt: ""
 frontpage: true
