--- a/photos/fire-spiderweb.qmd
+++ b/photos/fire-spiderweb.qmd
@@ -1,6 +1,6 @@
 ---
 title: Fire Spiderweb
-categories: [photo]
+categories: [photo, nsfw, spiderweb, corset]
 image: ../www/images/ties/fire-spiderweb.jpg
 image-alt: ""
 ---
