--- a/photos/index.qmd
+++ b/photos/index.qmd
@@ -4,7 +4,7 @@ listing:
   template: ../templates/photos.ejs
   contents: "."
   sort: "date desc"
-  max-items: 100
+  page-size: 100
   categories: true
   sort-ui: false
   filter-ui: true
