--- a/photos/index.qmd
+++ b/photos/index.qmd
@@ -7,7 +7,7 @@ listing:
   page-size: 100
   categories: true
   sort-ui: false
-  filter-ui: true
+  filter-ui: false
   date-format: iso
   fields: [title, image, categories]
 page-layout: full
