--- a/posts/2025-01-24_rosettes.qmd
+++ b/posts/2025-01-24_rosettes.qmd
@@ -4,7 +4,7 @@ date: 2025-01-24
 categories: [photo, tutorial]
 image: ../www/images/demos/rosette-tutorial.jpg
 image-alt: A 9-part image of the steps of a rosette hitch being tied
-frontpage: true
+frontpage: false
 description: How to create rosette frictions
 ---
 
