--- a/posts/2025-01-27_grid-project.qmd
+++ b/posts/2025-01-27_grid-project.qmd
@@ -2,9 +2,9 @@
 title: Grid Project
 date: 2025-01-27
 categories: []
-image: ../www/images/grid/setonix-grid.gif
+image: ../www/images/grid/setonix-grid.jpg
 image-alt: 36 corset ties
-frontpage: false
+frontpage: true
 description: My 36-tie project
 ---
 
@@ -12,4 +12,13 @@ I've been working on a project for the past few weeks to create a sort of "mood 
 
 ![](../www/images/grid/setonix-grid.jpg)
 
+[High-res version](../www/images/grid/setonix-grid-highres.jpg) (5452×7246, 7.6MB)
+
 I tied 36 different corsets in every colour combination of my rainbow ropes: 6 different bases (red, orange, yellow, green, blue and purple) and 5 different boning patterns on each of them.
+
+<!--
+list.files("../www/images/grid/aligned", full.names = TRUE) |>
+  paste0("![](", x = _, ")") |>
+  paste(collapse = "\n\n") |>
+  cat()
+-->
