--- a/posts/2025-02-01_csk-base.qmd
+++ b/posts/2025-02-01_csk-base.qmd
@@ -1,11 +1,11 @@
 ---
-title: ManyBodies
+title: Cored Square Knot Tie
 date: 2025-02-09
 categories: [video, tutorial]
 image: ../www/images/demo/csk.jpg
 image-alt: A cored square knot tie
 frontpage: true
-description: A demo video and timelapse of the cored square knot base.
+description: A demo video and timelapse of the cored square knot corset.
 ---
 
 A 16x timelapse of a self-tie. The base took 11 minutes and three 8-meter red jute ropes, and the boning took 19 minutes and two 8-meter yellow linen ropes (from @Casual_Rope). (I disappear in the middle for a bit to go blow my nose — I’m full of the cold today)
