--- a/photos/grid-44_g-g.qmd
+++ b/photos/grid-44_g-g.qmd
@@ -1,6 +1,6 @@
 ---
 title: Grid Corset with Green Base and Green Boning
-categories: [photo, grid, corset, nsfw]
+categories: [photo, grid, corset, nsfw, base]
 image: ../www/images/grid/44_g-g.jpg
 image-alt: ""
 ---
