--- a/photos/grid-outtake-5-1.qmd
+++ b/photos/grid-outtake-5-1.qmd
@@ -1,6 +1,6 @@
 ---
 title: Grid Corset with Blue Base and Red Boning
-categories: [photo, grid, corset, nsfw]
+categories: [photo, grid, corset, nsfw, piercing, cored square knot]
 image: ../www/images/grid-outtakes/5-1.jpg
 image-alt: ""
 ---
