--- a/photos/grid-outtake-5-2.qmd
+++ b/photos/grid-outtake-5-2.qmd
@@ -1,6 +1,6 @@
 ---
 title: Grid Corset with Blue Base and Orange Boning
-categories: [photo, grid, corset, nsfw]
+categories: [photo, grid, corset, nsfw, rosettes, piercing, cored square knot]
 image: ../www/images/grid-outtakes/5-2.jpg
 image-alt: ""
 ---
