--- a/photos/grid-outtake-5-6.qmd
+++ b/photos/grid-outtake-5-6.qmd
@@ -1,11 +1,13 @@
 ---
 title: Grid Corset with Blue Base and Purple Boning
-categories: [photo, grid, corset, nsfw, face]
+categories: [photo, grid, corset, nsfw, face, cored square knot]
 image: ../www/images/grid-outtakes/5-6.jpg
 image-alt: ""
 ---
 
-Outtake of corset from the [grid project](/posts/2025-01-27_grid-project.html).
+🔵🟣 Outtake of corset from the [grid project](/posts/2025-01-27_grid-project.html).
+
+I’m sometimes annoyed by the shadows of my aerial rig in all my photos, but I think it looks pretty good here
 
 ![](../www/images/grid-outtakes/5-6.jpg)
 
