--- a/photos/grid-11_r-r.qmd
+++ b/photos/grid-11_r-r.qmd
@@ -1,6 +1,6 @@
 ---
 title: Grid Corset with Red Base and Red Boning
-categories: [photo, grid, corset, nsfw]
+categories: [photo, grid, corset, nsfw, base]
 image: ../www/images/grid/11_r-r.jpg
 image-alt: ""
 ---
