--- a/photos/grid-51_b-r.qmd
+++ b/photos/grid-51_b-r.qmd
@@ -1,6 +1,6 @@
 ---
 title: Grid Corset with Blue Base and Red Boning
-categories: [photo, grid, corset, nsfw]
+categories: [photo, grid, corset, nsfw, cored square knot]
 image: ../www/images/grid/51_b-r.jpg
 image-alt: ""
 ---
