--- a/photos/grid-52_b-o.qmd
+++ b/photos/grid-52_b-o.qmd
@@ -1,6 +1,6 @@
 ---
 title: Grid Corset with Blue Base and Orange Boning
-categories: [photo, grid, corset, nsfw]
+categories: [photo, grid, corset, nsfw, rosettes, cored square knot]
 image: ../www/images/grid/52_b-o.jpg
 image-alt: ""
 ---
