--- a/photos/grid-54_b-g.qmd
+++ b/photos/grid-54_b-g.qmd
@@ -1,6 +1,6 @@
 ---
 title: Grid Corset with Blue Base and Green Boning
-categories: [photo, grid, corset, nsfw]
+categories: [photo, grid, corset, nsfw, cored square knot]
 image: ../www/images/grid/54_b-g.jpg
 image-alt: ""
 ---
