--- a/photos/grid-56_b-p.qmd
+++ b/photos/grid-56_b-p.qmd
@@ -1,6 +1,6 @@
 ---
 title: Grid Corset with Blue Base and Purple Boning
-categories: [photo, grid, corset, nsfw]
+categories: [photo, grid, corset, nsfw, cored square knot]
 image: ../www/images/grid/56_b-p.jpg
 image-alt: ""
 ---
