--- a/photos/grid-outtake-2-3.qmd
+++ b/photos/grid-outtake-2-3.qmd
@@ -1,6 +1,6 @@
 ---
 title: Grid Corset with Orange Base and Yellow Boning
-categories: [photo, grid, corset, nsfw]
+categories: [photo, grid, corset, nsfw, rosettes]
 image: ../www/images/grid-outtakes/2-3.jpg
 image-alt: ""
 ---
