--- a/photos/grid-outtake-3-6.qmd
+++ b/photos/grid-outtake-3-6.qmd
@@ -1,6 +1,6 @@
 ---
 title: Grid Corset with Yellow Base and Purple Boning
-categories: [photo, grid, corset, nsfw]
+categories: [photo, grid, corset, nsfw, cupcake]
 image: ../www/images/grid-outtakes/3-6.jpg
 image-alt: ""
 ---
