--- a/photos/grid-outtake-4-1c.qmd
+++ b/photos/grid-outtake-4-1c.qmd
@@ -1,6 +1,6 @@
 ---
 title: Grid Corset with Green Base and Red Boning
-categories: [photo, grid, corset, nsfw]
+categories: [photo, grid, corset, sfw-ish]
 image: ../www/images/grid-outtakes/b-sides/4-1c.jpg
 image-alt: ""
 ---
