--- a/photos/grid-outtake-5-3c.qmd
+++ b/photos/grid-outtake-5-3c.qmd
@@ -1,6 +1,6 @@
 ---
 title: Grid Corset with Blue Base and Yellow Boning
-categories: [photo, grid, corset, nsfw]
+categories: [photo, grid, corset, nsfw, cored square knot]
 image: ../www/images/grid-outtakes/b-sides/5-3c.jpg
 image-alt: ""
 ---
