--- a/photos/grid-outtake-5-3d.qmd
+++ b/photos/grid-outtake-5-3d.qmd
@@ -1,6 +1,6 @@
 ---
 title: Grid Corset with Blue Base and Yellow Boning
-categories: [photo, grid, corset, nsfw, face]
+categories: [photo, grid, corset, nsfw, face, cored square knot]
 image: ../www/images/grid-outtakes/b-sides/5-3d.jpg
 image-alt: ""
 ---
