--- a/photos/grid-outtake-5-4.qmd
+++ b/photos/grid-outtake-5-4.qmd
@@ -1,6 +1,6 @@
 ---
 title: Grid Corset with Blue Base and Green Boning
-categories: [photo, grid, corset, nsfw]
+categories: [photo, grid, corset, nsfw, cored square knot]
 image: ../www/images/grid-outtakes/5-4.jpg
 image-alt: ""
 ---
