--- a/photos/grid-outtake-6-4.qmd
+++ b/photos/grid-outtake-6-4.qmd
@@ -5,7 +5,7 @@ image: ../www/images/grid-outtakes/6-4.jpg
 image-alt: ""
 ---
 
-Outtake of corset from the [grid project](/posts/2025-01-27_grid-project.html).
+🟣🟢 Outtake of corset from the [grid project](/posts/2025-01-27_grid-project.html).
 
 ![](../www/images/grid-outtakes/6-4.jpg)
 
