--- a/photos/grid-base-1-red.qmd
+++ b/photos/grid-base-1-red.qmd
@@ -1,6 +1,6 @@
 ---
 title: Grid Base - Red
-categories: [photo, nsfw, base, selective colour]
+categories: [photo, nsfw, grid, base, selective colour]
 image: ../www/images/grid/grid-base-1-red.jpg
 image-alt: ""
 ---
