--- a/photos/grid-base-4-green.qmd
+++ b/photos/grid-base-4-green.qmd
@@ -1,6 +1,6 @@
 ---
 title: Grid Base - Green
-categories: [photo, nsfw, base, selective colour]
+categories: [photo, nsfw, grid, base, selective colour]
 image: ../www/images/grid/grid-base-4-green.jpg
 image-alt: ""
 ---
