--- a/photos/grid-base-5-blue.qmd
+++ b/photos/grid-base-5-blue.qmd
@@ -1,6 +1,6 @@
 ---
 title: Grid Base - Blue
-categories: [photo, nsfw, base, selective colour]
+categories: [photo, nsfw, grid, base, selective colour]
 image: ../www/images/grid/grid-base-5-blue.jpg
 image-alt: ""
 ---
