--- a/photos/grid-bases-colour.qmd
+++ b/photos/grid-bases-colour.qmd
@@ -1,6 +1,6 @@
 ---
 title: Grid Bases
-categories: [photo, nsfw, base, selective colour, rainbow]
+categories: [photo, nsfw, grid, base, selective colour, rainbow]
 image: ../www/images/grid/grid-bases-colour.jpg
 image-alt: ""
 ---
