--- a/photos/green-nails-chest.qmd
+++ b/photos/green-nails-chest.qmd
@@ -1,6 +1,6 @@
 ---
 title: Green Nails Chest
-categories: [photo, ssfw, corset, nails]
+categories: [photo, sfw, corset, nails]
 image: ../www/images/ties/green-nails-chest.jpg
 image-alt: ""
 date: 2025-02-09
