--- a/posts/2025-06-07_uncensored-market.qmd
+++ b/posts/2025-06-07_uncensored-market.qmd
@@ -1,7 +1,7 @@
 ---
 title: Self-Tie Corset Workshop at the Uncensored Market
 date: 2025-06-07
-categories: [workshop]
+categories: [workshop, in person, Scotland, Glasgow]
 image: ../www/images/demos/uncensored-2025.jpg
 image-alt: ""
 frontpage: true
