--- a/posts/2025-02-02_rosette-wrap.qmd
+++ b/posts/2025-02-02_rosette-wrap.qmd
@@ -1,11 +1,11 @@
 ---
-title: Rosette Wrap Tutorial
+title: Rosette Wrap Video Tutorial
 date: 2025-02-02
 categories: [tutorial, video, self-tie]
-image: ../www/images/demos/rosette-tutorial.jpg
-image-alt: A 9-part image of the steps of a rosette hitch being tied
+image: ../www/images/demos/rosette-video.jpg
+image-alt: A still of a rosette hitch being tied
 frontpage: true
-description: A self-tie tutorial for rosette wraps
+description: A self-tie video tutorial for rosette wraps
 ---
 
 If mobility allows, it's good to practice this one on your leg, so I did the video from that point of view.
