--- a/sets/bw-art-nouveau.qmd
+++ b/sets/bw-art-nouveau.qmd
@@ -1,6 +1,6 @@
 ---
 title: B&W Art Nouveau
-categories: [photo, nsfw, corset, b&w]
+categories: [nsfw, corset, b&w]
 image: ../www/images/ties/bw-art-nouveau-hand.jpg
 image-alt: ""
 date: 2025-03-23
