--- a/faq.qmd
+++ b/faq.qmd
@@ -19,7 +19,7 @@ I’m still learning a lot, so I’m not an appropriate source of ropes educatio
 
 As of August 2024, I have new rainbow ropes from [Casual Rope](https://fetlife.com/users/17130156) that are 8m/6mm linen. I really like them. They’ve written a [useful explainer about linen ropes](https://fetlife.com/users/17130156/posts/11253550).
 
-![](www/images/ties-sfw/casual-rope.jpg)
+![](www/images/demos/casual-rope.jpg)
 
 Most of my older ties are with 6mm jute, each 8 meters long. I got them on Etsy from someone I subsequently found out is [problematic](https://fetlife.com/users/2518467/posts/6240426), so I’m hoping to learn to treat and dye my own ropes now. 
 
@@ -44,7 +44,7 @@ I’m not sure what legal weight it holds, but I intend to share any of my own d
 
 Most of the ties I post are improvised, so sometimes I’m not even sure how I did them by the end. If I’m tying from someone else’s tutorial or inspired by a picture, I’ll always link to it (let me know if I’m ever not giving appropriate credit). 
 
-[Tutorials on this site](/posts/#category=tutorial)
+[Tutorials on this site](posts/#category=tutorial)
 
 
 ### Do you teach workshops?
@@ -61,7 +61,7 @@ The watermelon and sun/moon pants are from a UK Etsy seller called [SproutOrgani
 
 The rainbow and purple/green swirl pants are from an Etsy seller who isn’t online anymore. 
 
-::: {#fig-pants layout-ncol=4}
+::: {layout-ncol=4}
 
 ![](www/images/demos/pants-watermelon.jpg)
 
