--- a/sets/index.qmd
+++ b/sets/index.qmd
@@ -1,7 +1,7 @@
 ---
 title: "Sets"
 listing:
-  template: ../templates/photos.ejs
+  template: ../templates/photosets.ejs
   contents: "."
   sort: ["date desc", "image"]
   page-size: 100
