--- a/photos/anc1lla-harness.qmd
+++ b/photos/anc1lla-harness.qmd
@@ -1,6 +1,6 @@
 ---
 title: Anc1lla Harness
-categories: [photo]
+categories: [corset, nsfw, garters]
 image: ../www/images/ties/anc1lla-harness.jpg
 image-alt: ""
 date: 2024-10-08
