--- a/photos/cored-square-knot-corset.qmd
+++ b/photos/cored-square-knot-corset.qmd
@@ -1,6 +1,6 @@
 ---
 title: Cored Square Knot Corset
-categories: [photo]
+categories: [corset, nsfw, cored square knot]
 image: ../www/images/ties/cored-square-knot-corset.jpg
 image-alt: ""
 date: 2024-02-19
