--- a/photos/elf-panties.qmd
+++ b/photos/elf-panties.qmd
@@ -1,6 +1,6 @@
 ---
 title: Elf Panties
-categories: [photo]
+categories: [nsfw]
 image: ../www/images/ties/elf-panties.jpg
 image-alt: ""
 date: 2024-07-06
