--- a/photos/house-of-g-close.qmd
+++ b/photos/house-of-g-close.qmd
@@ -1,6 +1,6 @@
 ---
 title: House of G Close
-categories: [nsfw, House of G, corset, rosettes]
+categories: [nsfw, house of G, corset, rosettes]
 image: ../www/images/ties/house-of-g-close.jpg
 image-alt: ""
 date: 2025-04-12
