--- a/sets/black-rose.qmd
+++ b/sets/black-rose.qmd
@@ -11,7 +11,7 @@ credits:
   photo: Setonix
 ---
 
-::: {#fig-black-rose layout-ncol=3}
+::: {layout-ncol=3}
 
 ![](../www/images/ties/black-rose_zombie.jpg)
 
