--- a/sets/mardi-gras.qmd
+++ b/sets/mardi-gras.qmd
@@ -8,6 +8,8 @@ date: 2025-03-02
 
 My Mardi Gras tie, starting with the base and ending with the kisses. The colours each have a specific meaning: Purple represents justice, royalty, and creativity; Green represents faith, new beginnings, and abundance; and Gold represents power, the power of god, and the Easter octave.
 
+[More versions on my Patreon](https://www.patreon.com/posts/mardi-gras-tie-127206797?utm_medium=clipboard_copy&utm_source=copyLink&utm_campaign=postshare_creator&utm_content=join_link)
+
 ::: {layout-ncol=3}
 
 ![](../www/images/ties/mardi-gras-arms.jpg)
