--- a/sets/black-rose.qmd
+++ b/sets/black-rose.qmd
@@ -11,6 +11,8 @@ credits:
   photo: Setonix
 ---
 
+[More versions on my Patreon](https://www.patreon.com/posts/black-rose-127205853?utm_medium=clipboard_copy&utm_source=copyLink&utm_campaign=postshare_creator&utm_content=join_link)
+
 ::: {layout-ncol=3}
 
 ![](../www/images/ties/black-rose_zombie.jpg)
