--- a/sets/bw-art-nouveau.qmd
+++ b/sets/bw-art-nouveau.qmd
@@ -6,6 +6,10 @@ image-alt: ""
 date: 2025-03-23
 ---
 
+Exploring a more simple tie in an art nouveau style (it kind of reminds me of the Mackintosh chairs).
+
+[More versions on my Patreon](https://www.patreon.com/posts/b-w-art-nouveau-127206615?utm_medium=clipboard_copy&utm_source=copyLink&utm_campaign=postshare_creator&utm_content=join_link)
+
 ::: {layout-ncol=3}
 
 ![](../www/images/ties/bw-art-nouveau-eyes-closed.jpg)
