--- a/sets/grid-outtakes.qmd
+++ b/sets/grid-outtakes.qmd
@@ -13,6 +13,8 @@ credits:
 
 Outtakes from the grid project.
 
+[More versions on my Patreon](https://www.patreon.com/posts/grid-outtakes-127206427?utm_medium=clipboard_copy&utm_source=copyLink&utm_campaign=postshare_creator&utm_content=join_link)
+
 ::: {layout-ncol=3}
 
 ![](../www/images/ties/grid-outtakes_blue-orange.jpg)
