--- a/sets/st-paddy.qmd
+++ b/sets/st-paddy.qmd
@@ -8,6 +8,8 @@ date: 2025-03-17
 
 My St Patrick's Day design, using 4 sets of green jute and one set of green linen ropes.
 
+[More versions on my Patreon](https://www.patreon.com/posts/st-patricks-day-127205536?utm_medium=clipboard_copy&utm_source=copyLink&utm_campaign=postshare_creator&utm_content=join_link)
+
 ::: {layout-ncol=3}
 
 ![](../www/images/ties/st-paddy-thumbs.jpg)
