--- a/sets/trans-rights.qmd
+++ b/sets/trans-rights.qmd
@@ -13,6 +13,8 @@ credits:
 
 I made these ties the day of the protest in George Square for trans rights. 
 
+[More versions on my Patreon](https://www.patreon.com/posts/trans-rights-127205229?utm_medium=clipboard_copy&utm_source=copyLink&utm_campaign=postshare_creator&utm_content=join_link)
+
 ::: {layout-ncol=3}
 
 ![](../www/images/ties/trans-rights_alt-cover.jpg)
