--- a/posts/2025-01-10_panties-twist.qmd
+++ b/posts/2025-01-10_panties-twist.qmd
@@ -5,6 +5,7 @@ categories: [tutorial, video, self-tie]
 image: ../www/images/demos/panties-twist.jpg
 image-alt: ""
 frontpage: false
+draft: true
 description: A self-tie tutorial for my design, panties in a twist
 ---
 
