--- a/posts/2025-01-10_corset_demo.qmd
+++ b/posts/2025-01-10_corset_demo.qmd
@@ -4,7 +4,8 @@ date: 2025-01-10
 categories: [tutorial, video, self-tie]
 image: ../www/images/ties/corset-demo.jpg
 image-alt: ""
-frontpage: true
+frontpage: false
+draft: true
 description: A self-tie tutorial for my demo corset at Ropes in Space 
 ---
 
