--- a/posts/2025-01-16_heart-friction.qmd
+++ b/posts/2025-01-16_heart-friction.qmd
@@ -1,15 +1,14 @@
 ---
 title: Heart Friction Tutorial
 date: 2025-01-16
-categories: [tutorial, video, self-tie]
+categories: [tutorial, video, self-tie, patreon]
 image: ../www/images/demos/heart-friction.jpg
 image-alt: "Red ropes tied around a leg with the friction in the shape of a heart"
 frontpage: false
-draft: true
 description: A self-tie tutorial for a heart-shaped friction
 ---
 I worked this one out from a [photo](https://fetlife.com/users/10727486/pictures/141751096){target="_blank"} by @sweetangelvixen on Fetlife. I tried tying it the opposite direction to this first, which is possible, but not very easy. Top-to-bottom is definitely easier.
 
 If mobility allows, it's good to practice this one on your leg, so I did the video from that point of view.
 
-{{< video ../www/videos/setonix-heart-friction.mp4 width="512" >}}
+Access [the video](https://www.patreon.com/posts/heart-friction-127734884) on the free tier of my Patreon.
